# claude-standup

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  todo.md  vite.config.ts
.github/workflows/: release.yml
Casks/: claude-standup.rb
docs/: development-roadmap.md  index.html
plans/260603-2142-claude-session-monitor/: phase-01-scaffold-tauri-menubar.md  phase-02-core-engine-watch-parse.md  phase-03-state-detection-decisions.md  phase-04-bridge-autopopup-notify.md  phase-05-mission-control-ui.md  phase-06-llm-summary-hybrid.md  phase-07-packaging-settings-polish.md  plan.md
plans/260603-2142-claude-session-monitor/reports/: ui-ux-office-hero-redesign.md
plans/reports/: analysis-260603-2142-jsonl-detection-extraction.md  code-review-260603-2340-claude-monitor-v1.md  researcher-260603-2142-tauri-v2-macos-patterns.md  usage-cost-context-feature.md
scripts/: build.sh  dev.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  main.rs  model.rs  settings.rs
src-tauri/src/analysis/: decisions.rs  mod.rs  pending_question.rs  session_state.rs  status_map.rs  usage_blocks.rs
src-tauri/src/bridge/: commands.rs  events.rs  mod.rs  popup.rs  tray.rs  tray_pet.rs
src-tauri/src/llm/: claude_cli.rs  mod.rs  pricing.rs  prompt.rs
src-tauri/src/transcript/: content_block.rs  history_scan.rs  mod.rs  raw_line.rs
src-tauri/src/watcher/: discovery.rs  mod.rs  tailer.rs
src/components/: ActivityLog.tsx  DecisionTimeline.tsx  Header.tsx  IsoOffice.tsx  RecapModal.tsx  SessionCard.tsx  SessionDetail.tsx  SessionSummary.tsx  office-draw.ts  office-life.ts  summary-markdown.tsx
src/lib/: achievements.ts  daily-spend.ts  daily-stats.ts  format.ts  i18n.ts  progression.ts  recap-data.ts  recap-draw.ts  seasonal.ts  tauri-events.ts  types.ts  updater.ts
src/store/: lang-store.ts  sessions-store.ts
