[package]
name = "claude-monitor"
version = "0.1.0"
description = "Menubar monitor for active Claude Code sessions"
authors = ["bachdx"]
edition = "2021"

# Binary entry point. Library split deferred — single binary keeps Phase 01 simple.
[[bin]]
name = "claude-monitor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core. tray-icon = menubar tray; image-png = load PNG icons.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8.2.0"
dirs = "6.0.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
